fix bugs & alignment issues with KEY BENEFITS section

--- a/default.css
+++ b/default.css
@@ -139,13 +139,13 @@ img {
 }
 
 @media (min-width: 992px) {
-   {
+  .container {
     max-width: 960px;
   }
 }
 
 @media (min-width: 1200px) {
-  .container {
+  .key-benefits-container {
     max-width: 1140px;
   }
 }
